--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
 link 1 <a href="https://hotfile.io/TcGcq237y4/Conqsetup_exe">https://hotfile.io/TcGcq237y4/Conqsetup_exe</a> </br>
-link 2 <a href="https://letsupload.cc/044an239yd/Conqsetup_exe">https://letsupload.cc/044an239yd/Conqsetup_exe</a>
+
+<a href='https://letsupload.cc/044an239yd/Conqsetup_exe' target='_blank'>
+<input type='button' style='padding-left:10px;padding-top:10px;padding-right:10px;padding-bottom:10px;margin-left:10px;margin-top:10px;margin-right:10px;margin-bottom:10px;background-color:#1b90bb;color:#FFFFFF;border-left-width:1px;border-top-width:1px;border-right-width:1px;border-bottom-width:1px;border-color:#d5d5d5;border-radius:5px;cursor:pointer' value='Letsupload' onMouseOver=this.style.backgroundColor='#FFFFFF';this.style.color='#1b90bb';this.style.borderColor='#d5d5d5' onMouseOut=this.style.backgroundColor='#1b90bb';this.style.color='#FFFFFF';this.style.borderColor='#d5d5d5' />
+</a>
