--- a/index.html
+++ b/index.html
@@ -1,28 +1,7 @@
-<style>
-.BorderColorChangeElement {
-  	animation: BorderColorChange 1s ease-out 0s infinite alternate none running;
-}
-@keyframes BorderColorChange{
-  	0%  { border: 10px solid #ffc0cb;}
-  	100%  { border: 10px solid #ff69b4;}
-}
-@keyframes scaler {
-  0% {
-    transform: scale(1);
-  }
-  100% {    transform: scale(1.5);
-  }
-}
-.btnAnim162 {
-  animation: scaler 1s linear 0s infinite alternate none running;
-}
-.btnAnim162:hover{
-  animation-play-state: paused;
-}
-</style>
-<div class="BorderColorChangeElement" style="margin: 0 auto;text-align:center;overflow:hidden;border-radius:0px;-webkit-box-shadow: 16px 17px 18px -7px rgba(18,1,18,0.61);-moz-box-shadow: 16px 17px 18px -7px rgba(18,1,18,0.61);box-shadow: 16px 17px 18px -7px rgba(18,1,18,0.61);background:#009688;border:10px solid #000000;padding:8px;max-width:calc(100% - 48px);width:700px">
-	<div  style="display:inline-block;text-shadow:#030303 4px 4px 4px;position:relative;vertical-align: middle;padding:8px;font-size:45px;color:#ffffff;font-weight:normal">Support me!</div>
-	<div class="btnAnim162"  style="display:inline-block;position:relative;vertical-align: middle;padding:8px" >
-		<a target="_blank" href="https://metamask.app.link/send/0x929d28F3f3D61f7123DcdA85340dafc8533A42fB"><input type="button" value="Donate" style="margin:0px;background:#000000;padding:8px;border:3px solid #ffff00;color:#ffff00;border-radius:0px;cursor:pointer" /></a></div>
+<style>.BorderColorChangeElement{animation:BorderColorChange 1s ease-out 0s infinite alternate none running}@keyframes BorderColorChange{0%{border:10px solid #ffc0cb}100%{border:10px solid #ff69b4}}@keyframes scaler{0%{transform:scale(1)}100%{transform:scale(1.5)}}.btnAnim162{animation:scaler 1s linear 0s infinite alternate none running}.btnAnim162:hover{animation-play-state:paused}</style>
+<div class="BorderColorChangeElement" style="margin:0 auto;text-align:center;overflow:hidden;border-radius:0;-webkit-box-shadow:16px 17px 18px -7px rgba(18,1,18,0.61);-moz-box-shadow:16px 17px 18px -7px rgba(18,1,18,0.61);box-shadow:16px 17px 18px -7px rgba(18,1,18,0.61);background:#009688;border:10px solid #000;padding:8px;max-width:calc(100% - 48px);width:700px">
+<div style="display:inline-block;text-shadow:#030303 4px 4px 4px;position:relative;vertical-align:middle;padding:8px;font-size:45px;color:#fff;font-weight:normal">Support me!</div>
+<div class="btnAnim162" style="display:inline-block;position:relative;vertical-align:middle;padding:8px">
+<a target="_blank" href="https://metamask.app.link/send/0x929d28F3f3D61f7123DcdA85340dafc8533A42fB"><input type="button" value="Donate" style="margin:0;background:#000;padding:8px;border:3px solid #ff0;color:#ff0;border-radius:0;cursor:pointer" /></a></div>
 </div>
 <p>Conqueror's 1.51</p> </br> <a href='https://hotfile.io/TcGcq237y4/Conqsetup_exe' target='_blank'> <input type='button' style='padding-left:10px;padding-top:10px;padding-right:10px;padding-bottom:10px;margin-left:10px;margin-top:10px;margin-right:10px;margin-bottom:10px;background-color:#1b90bb;color:#FFFFFF;border-left-width:1px;border-top-width:1px;border-right-width:1px;border-bottom-width:1px;border-color:#d5d5d5;border-radius:5px;cursor:pointer' value='Hotfile' onMouseOver=this.style.backgroundColor='#FFFFFF';this.style.color='#1b90bb';this.style.borderColor='#d5d5d5' onMouseOut=this.style.backgroundColor='#1b90bb';this.style.color='#FFFFFF';this.style.borderColor='#d5d5d5' /> </a> <a href='https://letsupload.cc/044an239yd/Conqsetup_exe' target='_blank'> <input type='button' style='padding-left:10px;padding-top:10px;padding-right:10px;padding-bottom:10px;margin-left:10px;margin-top:10px;margin-right:10px;margin-bottom:10px;background-color:#1b90bb;color:#FFFFFF;border-left-width:1px;border-top-width:1px;border-right-width:1px;border-bottom-width:1px;border-color:#d5d5d5;border-radius:5px;cursor:pointer' value='Letsupload' onMouseOver=this.style.backgroundColor='#FFFFFF';this.style.color='#1b90bb';this.style.borderColor='#d5d5d5' onMouseOut=this.style.backgroundColor='#1b90bb';this.style.color='#FFFFFF';this.style.borderColor='#d5d5d5' /> </a>
